# fastapi_ollama_langchain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py  test.py
